# rust-url-shortner

./: .env  Cargo.toml  Dockerfile  LICENSE  docker-compose.yml  rust-toolchain.toml
data/: shortener.db
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs  redis.rs  sqlite.rs
src/models/: mod.rs  urls.rs
src/services/: endpoint_setter.rs  mod.rs  url_service.rs
src/utils/: mod.rs
