[package]
name = "url-shortner"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"
nanoid = "0.4"
once_cell = "1.19"
redis = { version = "0.25", features = ["tokio-comp"] }
dotenv = "0.15"
url = "2.4.0"
